# szl-governed-norm

./: .gitattributes  .gitignore  CITATION.cff  COMPLIANCE.md  DEPRECATED.md  README.md  benchmark.py  benchmark_sample_output.txt  build.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
tests/: test_correctness.py  test_hardening.py  test_kernel_core.py  test_norm.py  test_receipts.py  test_signing.py
torch-ext/szl_governed_norm/: __init__.py  _ops.py  _receipt.py
